--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "export NODE_ENV=production; node index.js"
   },
   "keywords": [
     "express"
@@ -13,7 +13,12 @@
   "author": "Keberson",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.9",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.3.1",
+    "nodemon": "^2.0.22",
+    "sequelize": "^6.31.1"
   }
 }
